fix overflow

--- a/themes/bob.css
+++ b/themes/bob.css
@@ -25,7 +25,7 @@ html,
 body {
 	margin: 0;
 	padding: 0;	
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 header {
@@ -94,11 +94,8 @@ main {
     bottom: 25px;
     left: 0;
     right: 0;
-	overflow: auto;
-	/* background-color: skyblue; */
-	background-image: url(../images/backgrounds/bg-bob.png);
-	
-	
+	overflow-y: hidden;
+
 }
 article {
 	
@@ -106,10 +103,7 @@ article {
 	min-width: 500px;
 	width: 100%;
 	height: 100%;
-	/* background-image: url(../images/backgrounds/bg-bob.png); */
-	
-	
-	
+
 }
 h1 {
 	padding-left: 15px;
